deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: btc-hot
---
apiVersion: v1
kind: Namespace
metadata:
  name: btc-net
