deploy/base/ntfy.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: btc-hot
spec:
  type: ExternalName
  externalName: ntfy.example.internal
